fix horizontal scroll on medium screen

--- a/sites/gcweb-menu/_screen-md-min-to-screen-md-max.scss
+++ b/sites/gcweb-menu/_screen-md-min-to-screen-md-max.scss
@@ -11,6 +11,11 @@
 	 * (Grid of the submenu panel)
 	 */
 
+	// avoid horizontal scroll on medium breakpoint
+	[role=menu] [role=menu] {
+		width: 610px;
+	}
+
 	[role=menu] [role=menu] li {
 		width: 100%;
 	}
